Project

General

Profile

Actions

Bug #20047

closed

rgw_file: unlink assert unsafe in multi-gateway environments

Added by Matt Benjamin almost 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Low
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The assert that unlinked objects are really unlinked is not safe for production use, since the operation is only locally atomic.


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #20142: jewel: rgw_file: unlink assert unsafe in multi-gateway environmentsResolvedNathan CutlerActions
Copied to rgw - Backport #20143: kraken: rgw_file: unlink assert unsafe in multi-gateway environmentsRejectedActions
Actions #1

Updated by Casey Bodley almost 7 years ago

  • Status changed from In Progress to Pending Backport
  • Backport changed from je to jewel kraken
Actions #3

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20142: jewel: rgw_file: unlink assert unsafe in multi-gateway environments added
Actions #4

Updated by Nathan Cutler almost 7 years ago

  • Copied to Backport #20143: kraken: rgw_file: unlink assert unsafe in multi-gateway environments added
Actions #5

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF