rgw_file:  remove post-unlink lookup check

This could induce asserts in multi-nfs-gateway scenarios.

Fixes: http://tracker.ceph.com/issues/20047

Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>
(cherry picked from commit b3db617ddd6fa2477726b54828b6410b36989ac7)